@@ -782,6 +782,9 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+        <configuration>
+          <jvmArguments>--add-opens=java.base/java.io=ALL-UNNAMED</jvmArguments>
+        </configuration>
         <executions>
           <execution>
             <id>build-info</id>
@@ -797,6 +800,7 @@
           </execution>
         </executions>
       </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
